# documindAI

./: .env.example  .replit  README.md  api-tests.http  app.py  comprehensive_test.txt  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Problem-Statement-Reading-through-large-documents-like-research-papers-legal-files-or-technical-m-1752474109836_1752474109837.txt
client/src/: index.css
client/src/components/: ChatInterface.tsx  DocumentSummary.tsx  DocumentUpload.tsx  Header.tsx  ThemeToggle.tsx
client/src/contexts/: ThemeContext.tsx
client/src/lib/: queryClient.ts
client/src/pages/: home.tsx
server/: routes.ts  storage.ts
server/services/: openai.ts
shared/: schema.ts
