[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "openai>=1.95.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "werkzeug>=3.1.3",
]
